--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <!-- Bootstrap core CSS -->
 <link href="bootstrap.min.css" rel="stylesheet">
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 
     <style>
 
@@ -18,6 +18,7 @@ body{max-width: 100%; overflow-x: hidden;}
 .headerr{height:600px;}
 .jumbotron {background: url('img/john.jpg') no-repeat center center fixed;color:#f5f5f5; background-size: cover;
  height: 700px; width:cover; }
+p{color:#f5f5f5;background-color: rgba(92,87,74, 0.6);margin-top:1.0rem;margin-left:2rem; width:25rem; height:auto;border: none;}
 .btn-outline-primary {color: #bb9d52!important;}
 .btn-outline-primary:hover {background-color: #bb9d52!important;color:#f5f5f5!important;}
 .card-img{padding: 10px; width:30rem; height:auto;border: none;}
@@ -26,8 +27,7 @@ body{max-width: 100%; overflow-x: hidden;}
 .footer {height:15vh; padding-top: 5vh;  background:rgba(245, 245, 245, 0.4);  margin: auto; width:100vw; border-radius: 5px; justify-content: space-between;}
 .footer a {color: #bb9d52; font-size: 30px;padding: 10px;transition: all .5s ease;}
 .footer a:hover { color:#F5F5F5;}
-
-
+.fa-solid{color: #bb9d52;}
 
  /*///mobile mobile* mobile mobile*/
  /*IPAD PRO*/
@@ -93,9 +93,9 @@ body{max-width: 100%; overflow-x: hidden;}
       <div class="py-5">
         <h1 class="display-5 fw-bold text-white">Professor João Neto</h1>
         <div class="col-lg-6 mx-auto">
-          <p class="fs-5 mb-4">Treinamento para a vida</p>
+          <h2 class="fs-5 mb-4">Treinamento para a vida</h2>
           <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-            <button type="button" class=" btn btn-outline-primary border-light btn-lg px-4 me-sm-3 fw-bold">Dica do dia</button>
+            <a href ="#prof"><button  type="button" class=" btn btn-outline-primary border-light btn-lg px-4 me-sm-3 fw-bold">Dica do dia</button></a>
           </div>
         </div>
       </div>
@@ -103,7 +103,7 @@ body{max-width: 100%; overflow-x: hidden;}
     <div class="jumbotron p-5 mb-4 bg-light rounded-3" id="sobre">
       <div class="container-fluid py-5">
         <h1 class="display-5 fw-bold">Professor João Neto</h1>
-        <p class="col-md-8 fs-4">Aqui você vai encontrar dicas de treinamento e saúde, visando o seu desenvolvimento para uma saúde exemplar e um ótimo condicionamento. Para uma rotina de exercícios completa, de acordo com seus objetivos, entre em contato para uma consultoria comigo! <br> Estamos juntos! </p>
+        <h2 class="col-md-8 fs-4">Aqui você vai encontrar dicas de treinamento e saúde, visando o seu desenvolvimento para uma saúde exemplar e um ótimo condicionamento. Para uma rotina de exercícios completa, de acordo com seus objetivos, entre em contato para uma consultoria comigo! <br> Estamos juntos! </h2>
       </div>
     </div>
 
@@ -119,8 +119,12 @@ body{max-width: 100%; overflow-x: hidden;}
         </div>
         <div class="col-md-8 mt-2 ">
           <div class="card-body card-img-overlay border-light bodies">
-            <h5 class="card-title">Musculação<span><a href=""><i class="fa fa-instagram"></i></a></span></h5>
-            <h6 class="card-text">Dica do dia </h6>
+            <h5 class="card-title">Musculação<span><a href=""><i class="fa-solid fa-dumbbell"></i></a></span></h5>
+            <p><strong>Efeitos do treinamento de força na economia de corrida em corredores altamente treinados</strong>
+            <br>Esta revisão mostrou um efeito geral unânime e benéfico do treinamento de força na <strong>economia de corrida</strong> em corredores de média e longa distância altamente treinados. Um programa de treinamento de força consistindo de <strong>2 a 4 exercícios resistidos (40 a 70% de 1RM) sem atingir a falha, associados a exercícios pliométricos, na frequência de 2 a 3 vezes por semana</strong> por 8 a 12 semanas é uma estratégia segura para melhorar a economia de corrida. Isso pode ajudar corredores de média e longa distância altamente treinados a alcançar um desempenho ideal.
+            <br><br><a href="https://journals.lww.com/nsca-jscr/Fulltext/2016/08000/Effects_of_Strength_Training_on_Running_Economy_in.36.aspx" target="blank" style="color: #bb9d52">Balsalobre-Fernández C, Santos-Concejero J, Grivas GV. Effects of Strength Training on Running Economy in Highly Trained Runners: A Systematic Review With Meta-Analysis of Controlled Trials. J Strength Cond Res. 2016 Aug;30(8):2361-8. </a>
+
+          </p>
           </div>
         </div>
       </div>
@@ -132,8 +136,12 @@ body{max-width: 100%; overflow-x: hidden;}
         </div>
         <div class="col-md-8 mt-2">
           <div class="card-body card-img-overlay border-light bodies">
-            <h5 class="card-title">Corrida <span><a href=""><i class="fa fa-instagram"></i></a></span></h5>
-            <h6 class="card-text">Dica do dia</h6>
+            <h5 class="card-title">Corrida <span><a href=""><i class="fa-solid fa-person-running"></i></a></span></h5>
+            <p><strong>Aterrissagem dos pés na corrida </strong>
+              <br>A <strong>corrida de longa distância</strong> é uma das atividades físicas mais populares, e as lesões relacionadas à corrida também são comuns. Sugere-se que os <strong>padrões de atterissagem do pé</strong> afetam as variáveis biomecânicas relacionadas aos riscos de lesões. Nesta revisão, os autores concluíram que a corrida com a aterrissagem no calcanhar (retropé) impôs cargas biomecânicas mais altas no impacto geral do solo e nas articulações do joelho e patelofemoral, enquanto que a atterissagem com o antepé, impôs cargas biomecânicas mais altas na articulação do tornozelo e no tendão de Aquiles. A modificação das técnicas de aterrissagem pode afetar as cargas biomecânicas específicas experimentadas em estruturas ou tecidos relevantes durante a corrida.
+              <br><br><a href="https://journals.sagepub.com/doi/10.1177/1941738120934715?url_ver=Z39.88-2003&rfr_id=ori:rid:crossref.org&rfr_dat=cr_pub%20%200pubmed" target="blank" style="color: #bb9d52">Xu Y, Yuan P, Wang R, Wang D, Liu J, Zhou H. Effects of Foot Strike Techniques on Running Biomechanics: A Systematic Review and Meta-analysis. Sports Health. 2021 Jan/Feb;13(1):71-77.</a>
+  
+            </p>
           </div>
         </div>
       </div>
@@ -145,8 +153,12 @@ body{max-width: 100%; overflow-x: hidden;}
         </div>
         <div class="col-md-8 mt-2">
           <div class="card-body card-img-overlay border-light bodies">
-            <h5 class="card-title">Bem estar  <span><a href=""><i class="fa fa-instagram"></i></a></span></h5>
-            <h6 class="card-text">Dica do dia</h6>
+            <h5 class="card-title">Bem estar  <span><a href=""><i class="fa-solid fa-spa"></i></a></span></h5>
+            <p><strong>Atividade física, exercício e transtornos mentais</strong>
+              <br>Evidências convincentes demonstraram que a <strong>atividade física</strong> e o exercício também podem prevenir transtornos mentais comuns, como <strong>depressão e transtornos de ansiedade</strong>, e têm múltiplos efeitos benéficos na saúde física e mental de pessoas com uma ampla gama de transtornos mentais. No entanto, a implementação na prática clínica tem sido lenta, provavelmente devido a barreiras associadas tanto aos pacientes quanto aos profissionais de saúde mental. Exercícios devem ser incorporados à rotina de cuidados de pessoas com transtornos mentais devido aos seus múltiplos benefícios nos resultados de saúde física e mental. Uma abordagem multidisciplinar é necessária para superar as barreiras dos pacientes e aumentar a adesão e os benefícios.
+              <br><br><a href="https://www.scielo.br/j/trends/a/jCRvs9LQq8ycmLwLysGBRFM/?lang=en" target="blank" style="color: #bb9d52">Schuch FB, Vancampfort D. Physical activity, exercise, and mental disorders: it is time to move on. Trends Psychiatry Psychother. 2021 Jul-Sep;43(3):177-184. </a>
+  
+            </p>
           </div>
         </div>
       </div>
@@ -212,8 +224,8 @@ body{max-width: 100%; overflow-x: hidden;}
 
   <footer class="footer sm-12 bg-dark text-white">
     <div class="container text-center" id="contato">
-      <a href="https://wa.me/5541992673154"><i class="fa fa-whatsapp"></i></a>
-      <a href=""><i class="fa fa-instagram"></i></a>
+      <a href="https://wa.me/5541992673154" target="blank"><i class="fa-brands fa-whatsapp"></i></a>
+      <a href="https://www.instagram.com/joaoneto.prof/?igshid=ZmZhODViOGI%3D" target ="_blank"><i class="fa-brands fa-instagram"></i></a>
       </div>
   </footer>
 
